Rebased on master and PR changes

--- a/examples/data_apis/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/data_apis/pytorch_data_api_tiledb_sparse.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example notebook shows how we can train a Factorization Machines classifier.\n",
-    "Factorization Machines ([FMs](https://www.csie.ntu.edu.tw/~b97053/paper/Rendle2010FM.pdf)) are a general predictor, that are able to perform well in problems with high sparsity, like recommender systems.\n",
+    "This example notebook shows how we can train a simple Regression classifier.\n",
     "We employ TileDB as a storage engine for our training data and labels.\n",
     "We will use the MovieLens 100K public data set, available [here](https://grouplens.org/datasets/movielens/100k/). We will first download the\n",
     "MovieLens, which contains 100.000 ratings, by 943 users on 1682 items.\n",
-    "Continuing, we will use our TileDB support for PyTorch Sparse Dataloader API in order to train an FM classifier.\n",
-    "First, let's import what we need and download our data."
+    "Continuing, we will use our TileDB support for PyTorch Sparse Dataloader API in order to train the classifier.\n",
+    "First, let's import what we need and download our data. We will transform our data to a sparse format\n",
+    "in order to show the support of TileDB in ingesting and providing to the Pytorch framework sparse datasets. Sparse\n",
+    "datasets are important and frequently found and used in applications like recommender systems et.al. For example by designing\n",
+    "a Factorisation Machine [FM model](https://www.csie.ntu.edu.tw/~b97053/paper/Rendle2010FM.pdf) someone could take advantage of data sparsity and build a refined recommendation system."
    ]
   },
   {
@@ -46,7 +48,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "('u.data', <http.client.HTTPMessage at 0x14b411eb0>)"
+      "text/plain": "('u.data', <http.client.HTTPMessage at 0x14498eeb0>)"
      },
      "execution_count": 2,
      "metadata": {},
@@ -212,8 +214,7 @@
    "outputs": [],
    "source": [
     "user_movie = data_one_hot[data_one_hot.columns.difference(['rating'])]\n",
-    "ratings = data['rating']\n",
-    "\n"
+    "ratings = data['rating']"
    ],
    "metadata": {
     "collapsed": false,
@@ -459,148 +460,134 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 11.897947\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/konstantinostsitsimpikos/tileroot/TileDB-ML/venv/lib/python3.8/site-packages/torch/nn/modules/loss.py:528: UserWarning: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: 1 Batch: 100 Loss: 1.434249\n",
-      "Train Epoch: 1 Batch: 200 Loss: 1.122545\n",
-      "Train Epoch: 1 Batch: 300 Loss: 1.596507\n",
-      "Train Epoch: 1 Batch: 400 Loss: 1.251316\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.563675\n",
-      "Train Epoch: 1 Batch: 600 Loss: 1.439507\n",
-      "Train Epoch: 1 Batch: 700 Loss: 1.296800\n",
-      "Train Epoch: 1 Batch: 800 Loss: 1.036165\n",
-      "Train Epoch: 1 Batch: 900 Loss: 1.375567\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.937286\n",
-      "Train Epoch: 1 Batch: 1100 Loss: 1.061382\n",
-      "Train Epoch: 1 Batch: 1200 Loss: 1.314131\n",
-      "Train Epoch: 1 Batch: 1300 Loss: 1.419514\n",
-      "Train Epoch: 1 Batch: 1400 Loss: 1.049100\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.067766\n",
-      "Train Epoch: 1 Batch: 1600 Loss: 1.188462\n",
-      "Train Epoch: 1 Batch: 1700 Loss: 0.808228\n",
-      "Train Epoch: 1 Batch: 1800 Loss: 1.374337\n",
-      "Train Epoch: 1 Batch: 1900 Loss: 1.305547\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.811797\n",
-      "Train Epoch: 1 Batch: 2100 Loss: 1.568941\n",
-      "Train Epoch: 1 Batch: 2200 Loss: 1.187829\n",
-      "Train Epoch: 1 Batch: 2300 Loss: 1.315253\n",
-      "Train Epoch: 1 Batch: 2400 Loss: 1.187909\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.376827\n",
-      "Train Epoch: 1 Batch: 2600 Loss: 1.125839\n",
-      "Train Epoch: 1 Batch: 2700 Loss: 0.663477\n",
-      "Train Epoch: 1 Batch: 2800 Loss: 1.135154\n",
-      "Train Epoch: 1 Batch: 2900 Loss: 0.742940\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.584489\n",
-      "Train Epoch: 1 Batch: 3100 Loss: 1.247983\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.530597\n",
-      "Train Epoch: 2 Batch: 100 Loss: 1.415536\n",
-      "Train Epoch: 2 Batch: 200 Loss: 1.122042\n",
-      "Train Epoch: 2 Batch: 300 Loss: 1.596394\n",
-      "Train Epoch: 2 Batch: 400 Loss: 1.250659\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.563430\n",
-      "Train Epoch: 2 Batch: 600 Loss: 1.439235\n",
-      "Train Epoch: 2 Batch: 700 Loss: 1.296204\n",
-      "Train Epoch: 2 Batch: 800 Loss: 1.036124\n",
-      "Train Epoch: 2 Batch: 900 Loss: 1.375446\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.937038\n",
-      "Train Epoch: 2 Batch: 1100 Loss: 1.061051\n",
-      "Train Epoch: 2 Batch: 1200 Loss: 1.314221\n",
-      "Train Epoch: 2 Batch: 1300 Loss: 1.416454\n",
-      "Train Epoch: 2 Batch: 1400 Loss: 1.048643\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 1.067720\n",
-      "Train Epoch: 2 Batch: 1600 Loss: 1.188342\n",
-      "Train Epoch: 2 Batch: 1700 Loss: 0.808307\n",
-      "Train Epoch: 2 Batch: 1800 Loss: 1.374311\n",
-      "Train Epoch: 2 Batch: 1900 Loss: 1.305571\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.811845\n",
-      "Train Epoch: 2 Batch: 2100 Loss: 1.569407\n",
-      "Train Epoch: 2 Batch: 2200 Loss: 1.187827\n",
-      "Train Epoch: 2 Batch: 2300 Loss: 1.315123\n",
-      "Train Epoch: 2 Batch: 2400 Loss: 1.187890\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.376836\n",
-      "Train Epoch: 2 Batch: 2600 Loss: 1.125744\n",
-      "Train Epoch: 2 Batch: 2700 Loss: 0.663002\n",
-      "Train Epoch: 2 Batch: 2800 Loss: 1.135006\n",
-      "Train Epoch: 2 Batch: 2900 Loss: 0.742829\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.582676\n",
-      "Train Epoch: 2 Batch: 3100 Loss: 1.247571\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.527772\n",
-      "Train Epoch: 3 Batch: 100 Loss: 1.415422\n",
-      "Train Epoch: 3 Batch: 200 Loss: 1.121867\n",
-      "Train Epoch: 3 Batch: 300 Loss: 1.596310\n",
-      "Train Epoch: 3 Batch: 400 Loss: 1.250072\n",
-      "Train Epoch: 3 Batch: 500 Loss: 1.563414\n",
-      "Train Epoch: 3 Batch: 600 Loss: 1.439129\n",
-      "Train Epoch: 3 Batch: 700 Loss: 1.295902\n",
-      "Train Epoch: 3 Batch: 800 Loss: 1.036162\n",
-      "Train Epoch: 3 Batch: 900 Loss: 1.375399\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.936955\n",
-      "Train Epoch: 3 Batch: 1100 Loss: 1.060873\n",
-      "Train Epoch: 3 Batch: 1200 Loss: 1.314372\n",
-      "Train Epoch: 3 Batch: 1300 Loss: 1.414384\n",
-      "Train Epoch: 3 Batch: 1400 Loss: 1.048405\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 1.067653\n",
-      "Train Epoch: 3 Batch: 1600 Loss: 1.188313\n",
-      "Train Epoch: 3 Batch: 1700 Loss: 0.808413\n",
-      "Train Epoch: 3 Batch: 1800 Loss: 1.374330\n",
-      "Train Epoch: 3 Batch: 1900 Loss: 1.305672\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.812016\n",
-      "Train Epoch: 3 Batch: 2100 Loss: 1.569800\n",
-      "Train Epoch: 3 Batch: 2200 Loss: 1.187870\n",
-      "Train Epoch: 3 Batch: 2300 Loss: 1.315038\n",
-      "Train Epoch: 3 Batch: 2400 Loss: 1.187927\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.376878\n",
-      "Train Epoch: 3 Batch: 2600 Loss: 1.125712\n",
-      "Train Epoch: 3 Batch: 2700 Loss: 0.662717\n",
-      "Train Epoch: 3 Batch: 2800 Loss: 1.134891\n",
-      "Train Epoch: 3 Batch: 2900 Loss: 0.742787\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.581501\n",
-      "Train Epoch: 3 Batch: 3100 Loss: 1.247313\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.525708\n",
-      "Train Epoch: 4 Batch: 100 Loss: 1.415370\n",
-      "Train Epoch: 4 Batch: 200 Loss: 1.121801\n",
-      "Train Epoch: 4 Batch: 300 Loss: 1.596236\n",
-      "Train Epoch: 4 Batch: 400 Loss: 1.249584\n",
-      "Train Epoch: 4 Batch: 500 Loss: 1.563444\n",
-      "Train Epoch: 4 Batch: 600 Loss: 1.439096\n",
-      "Train Epoch: 4 Batch: 700 Loss: 1.295736\n",
-      "Train Epoch: 4 Batch: 800 Loss: 1.036207\n",
-      "Train Epoch: 4 Batch: 900 Loss: 1.375387\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.936936\n",
-      "Train Epoch: 4 Batch: 1100 Loss: 1.060778\n",
-      "Train Epoch: 4 Batch: 1200 Loss: 1.314515\n",
-      "Train Epoch: 4 Batch: 1300 Loss: 1.412949\n",
-      "Train Epoch: 4 Batch: 1400 Loss: 1.048283\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 1.067593\n",
-      "Train Epoch: 4 Batch: 1600 Loss: 1.188315\n",
-      "Train Epoch: 4 Batch: 1700 Loss: 0.808524\n",
-      "Train Epoch: 4 Batch: 1800 Loss: 1.374369\n",
-      "Train Epoch: 4 Batch: 1900 Loss: 1.305787\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.812207\n",
-      "Train Epoch: 4 Batch: 2100 Loss: 1.570131\n",
-      "Train Epoch: 4 Batch: 2200 Loss: 1.187927\n",
-      "Train Epoch: 4 Batch: 2300 Loss: 1.314981\n",
-      "Train Epoch: 4 Batch: 2400 Loss: 1.187983\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.376935\n",
-      "Train Epoch: 4 Batch: 2600 Loss: 1.125711\n",
-      "Train Epoch: 4 Batch: 2700 Loss: 0.662540\n",
-      "Train Epoch: 4 Batch: 2800 Loss: 1.134789\n",
-      "Train Epoch: 4 Batch: 2900 Loss: 0.742774\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.580723\n",
-      "Train Epoch: 4 Batch: 3100 Loss: 1.247141\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.939725\n",
+      "Train Epoch: 1 Batch: 100 Loss: 1.429877\n",
+      "Train Epoch: 1 Batch: 200 Loss: 1.124218\n",
+      "Train Epoch: 1 Batch: 300 Loss: 1.559290\n",
+      "Train Epoch: 1 Batch: 400 Loss: 1.198203\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.468362\n",
+      "Train Epoch: 1 Batch: 600 Loss: 1.410525\n",
+      "Train Epoch: 1 Batch: 700 Loss: 1.245862\n",
+      "Train Epoch: 1 Batch: 800 Loss: 1.008952\n",
+      "Train Epoch: 1 Batch: 900 Loss: 1.287500\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.879654\n",
+      "Train Epoch: 1 Batch: 1100 Loss: 1.035026\n",
+      "Train Epoch: 1 Batch: 1200 Loss: 1.150355\n",
+      "Train Epoch: 1 Batch: 1300 Loss: 1.297943\n",
+      "Train Epoch: 1 Batch: 1400 Loss: 1.018018\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.015747\n",
+      "Train Epoch: 1 Batch: 1600 Loss: 1.135311\n",
+      "Train Epoch: 1 Batch: 1700 Loss: 0.741522\n",
+      "Train Epoch: 1 Batch: 1800 Loss: 1.276616\n",
+      "Train Epoch: 1 Batch: 1900 Loss: 1.181891\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.546486\n",
+      "Train Epoch: 1 Batch: 2100 Loss: 1.522087\n",
+      "Train Epoch: 1 Batch: 2200 Loss: 1.029067\n",
+      "Train Epoch: 1 Batch: 2300 Loss: 1.233550\n",
+      "Train Epoch: 1 Batch: 2400 Loss: 1.150473\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.286745\n",
+      "Train Epoch: 1 Batch: 2600 Loss: 1.034428\n",
+      "Train Epoch: 1 Batch: 2700 Loss: 0.552784\n",
+      "Train Epoch: 1 Batch: 2800 Loss: 1.110835\n",
+      "Train Epoch: 1 Batch: 2900 Loss: 0.660184\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.507061\n",
+      "Train Epoch: 1 Batch: 3100 Loss: 1.126580\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.390929\n",
+      "Train Epoch: 2 Batch: 100 Loss: 1.328856\n",
+      "Train Epoch: 2 Batch: 200 Loss: 1.048736\n",
+      "Train Epoch: 2 Batch: 300 Loss: 1.372928\n",
+      "Train Epoch: 2 Batch: 400 Loss: 0.835827\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.084596\n",
+      "Train Epoch: 2 Batch: 600 Loss: 1.351097\n",
+      "Train Epoch: 2 Batch: 700 Loss: 1.094422\n",
+      "Train Epoch: 2 Batch: 800 Loss: 0.947354\n",
+      "Train Epoch: 2 Batch: 900 Loss: 1.209907\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.794726\n",
+      "Train Epoch: 2 Batch: 1100 Loss: 0.983315\n",
+      "Train Epoch: 2 Batch: 1200 Loss: 0.971376\n",
+      "Train Epoch: 2 Batch: 1300 Loss: 1.125253\n",
+      "Train Epoch: 2 Batch: 1400 Loss: 0.978277\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.949487\n",
+      "Train Epoch: 2 Batch: 1600 Loss: 1.085883\n",
+      "Train Epoch: 2 Batch: 1700 Loss: 0.638390\n",
+      "Train Epoch: 2 Batch: 1800 Loss: 1.150877\n",
+      "Train Epoch: 2 Batch: 1900 Loss: 1.022353\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.355630\n",
+      "Train Epoch: 2 Batch: 2100 Loss: 1.461343\n",
+      "Train Epoch: 2 Batch: 2200 Loss: 0.868052\n",
+      "Train Epoch: 2 Batch: 2300 Loss: 1.164431\n",
+      "Train Epoch: 2 Batch: 2400 Loss: 1.118664\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.207543\n",
+      "Train Epoch: 2 Batch: 2600 Loss: 0.964069\n",
+      "Train Epoch: 2 Batch: 2700 Loss: 0.490285\n",
+      "Train Epoch: 2 Batch: 2800 Loss: 1.085917\n",
+      "Train Epoch: 2 Batch: 2900 Loss: 0.601597\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.455696\n",
+      "Train Epoch: 2 Batch: 3100 Loss: 1.041319\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.314536\n",
+      "Train Epoch: 3 Batch: 100 Loss: 1.287261\n",
+      "Train Epoch: 3 Batch: 200 Loss: 1.015327\n",
+      "Train Epoch: 3 Batch: 300 Loss: 1.256441\n",
+      "Train Epoch: 3 Batch: 400 Loss: 0.705474\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.966485\n",
+      "Train Epoch: 3 Batch: 600 Loss: 1.324331\n",
+      "Train Epoch: 3 Batch: 700 Loss: 1.004607\n",
+      "Train Epoch: 3 Batch: 800 Loss: 0.916209\n",
+      "Train Epoch: 3 Batch: 900 Loss: 1.185925\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.749350\n",
+      "Train Epoch: 3 Batch: 1100 Loss: 0.951721\n",
+      "Train Epoch: 3 Batch: 1200 Loss: 0.891762\n",
+      "Train Epoch: 3 Batch: 1300 Loss: 1.027082\n",
+      "Train Epoch: 3 Batch: 1400 Loss: 0.956935\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.912107\n",
+      "Train Epoch: 3 Batch: 1600 Loss: 1.061929\n",
+      "Train Epoch: 3 Batch: 1700 Loss: 0.574357\n",
+      "Train Epoch: 3 Batch: 1800 Loss: 1.064096\n",
+      "Train Epoch: 3 Batch: 1900 Loss: 0.936996\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.263863\n",
+      "Train Epoch: 3 Batch: 2100 Loss: 1.413710\n",
+      "Train Epoch: 3 Batch: 2200 Loss: 0.775371\n",
+      "Train Epoch: 3 Batch: 2300 Loss: 1.128805\n",
+      "Train Epoch: 3 Batch: 2400 Loss: 1.097479\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.152894\n",
+      "Train Epoch: 3 Batch: 2600 Loss: 0.920934\n",
+      "Train Epoch: 3 Batch: 2700 Loss: 0.459517\n",
+      "Train Epoch: 3 Batch: 2800 Loss: 1.069169\n",
+      "Train Epoch: 3 Batch: 2900 Loss: 0.566739\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.420709\n",
+      "Train Epoch: 3 Batch: 3100 Loss: 0.981252\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.270520\n",
+      "Train Epoch: 4 Batch: 100 Loss: 1.263844\n",
+      "Train Epoch: 4 Batch: 200 Loss: 0.999839\n",
+      "Train Epoch: 4 Batch: 300 Loss: 1.176850\n",
+      "Train Epoch: 4 Batch: 400 Loss: 0.643234\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.917536\n",
+      "Train Epoch: 4 Batch: 600 Loss: 1.308549\n",
+      "Train Epoch: 4 Batch: 700 Loss: 0.947229\n",
+      "Train Epoch: 4 Batch: 800 Loss: 0.899916\n",
+      "Train Epoch: 4 Batch: 900 Loss: 1.173828\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.721523\n",
+      "Train Epoch: 4 Batch: 1100 Loss: 0.930386\n",
+      "Train Epoch: 4 Batch: 1200 Loss: 0.852376\n",
+      "Train Epoch: 4 Batch: 1300 Loss: 0.965264\n",
+      "Train Epoch: 4 Batch: 1400 Loss: 0.943307\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.890966\n",
+      "Train Epoch: 4 Batch: 1600 Loss: 1.045596\n",
+      "Train Epoch: 4 Batch: 1700 Loss: 0.533227\n",
+      "Train Epoch: 4 Batch: 1800 Loss: 1.000730\n",
+      "Train Epoch: 4 Batch: 1900 Loss: 0.888425\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.212786\n",
+      "Train Epoch: 4 Batch: 2100 Loss: 1.374117\n",
+      "Train Epoch: 4 Batch: 2200 Loss: 0.719073\n",
+      "Train Epoch: 4 Batch: 2300 Loss: 1.110085\n",
+      "Train Epoch: 4 Batch: 2400 Loss: 1.080780\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.111029\n",
+      "Train Epoch: 4 Batch: 2600 Loss: 0.891760\n",
+      "Train Epoch: 4 Batch: 2700 Loss: 0.443811\n",
+      "Train Epoch: 4 Batch: 2800 Loss: 1.056480\n",
+      "Train Epoch: 4 Batch: 2900 Loss: 0.544784\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.394655\n",
+      "Train Epoch: 4 Batch: 3100 Loss: 0.936423\n"
      ]
     }
    ],
@@ -625,7 +612,7 @@
     "            optimizer.zero_grad()\n",
     "            # forward + backward + optimize\n",
     "            outputs = logre(inputs.to(torch.float))\n",
-    "            loss = criterion(outputs, labels.type(torch.FloatTensor))\n",
+    "            loss = criterion(outputs, labels.type(torch.FloatTensor).view(-1,1))\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            if batch_idx % 100 == 0:\n",
