--- a/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -10,13 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x152c4d7f0>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tiledb\n",
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,6 +120,9 @@
    },
    "outputs": [],
    "source": [
+    "import logging\n",
+    "logging.getLogger(\"lightning\").setLevel(logging.ERROR)\n",
+    "\n",
     "train_loader = torch.utils.data.DataLoader(\n",
     "  torchvision.datasets.MNIST('', train=True, download=True,\n",
     "                             transform=torchvision.transforms.Compose([\n",
@@ -133,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -195,13 +209,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 [0/60000 (0%)]\tLoss: 2.316989\n",
+      "Train Epoch: 1 [1280/60000 (2%)]\tLoss: 2.310947\n",
+      "Train Epoch: 1 [2560/60000 (4%)]\tLoss: 2.287661\n",
+      "Train Epoch: 1 [3840/60000 (6%)]\tLoss: 2.261894\n",
+      "Train Epoch: 1 [5120/60000 (9%)]\tLoss: 2.287373\n",
+      "Train Epoch: 1 [6400/60000 (11%)]\tLoss: 2.252142\n",
+      "Train Epoch: 1 [7680/60000 (13%)]\tLoss: 2.202135\n",
+      "Train Epoch: 1 [8960/60000 (15%)]\tLoss: 2.180613\n",
+      "Train Epoch: 1 [10240/60000 (17%)]\tLoss: 2.127905\n",
+      "Train Epoch: 1 [11520/60000 (19%)]\tLoss: 2.048942\n",
+      "Train Epoch: 1 [12800/60000 (21%)]\tLoss: 1.947829\n",
+      "Train Epoch: 1 [14080/60000 (23%)]\tLoss: 1.886966\n",
+      "Train Epoch: 1 [15360/60000 (26%)]\tLoss: 1.879172\n",
+      "Train Epoch: 1 [16640/60000 (28%)]\tLoss: 1.631594\n",
+      "Train Epoch: 1 [17920/60000 (30%)]\tLoss: 1.653769\n",
+      "Train Epoch: 1 [19200/60000 (32%)]\tLoss: 1.471534\n",
+      "Train Epoch: 1 [20480/60000 (34%)]\tLoss: 1.364005\n",
+      "Train Epoch: 1 [21760/60000 (36%)]\tLoss: 1.362187\n",
+      "Train Epoch: 1 [23040/60000 (38%)]\tLoss: 1.254044\n",
+      "Train Epoch: 1 [24320/60000 (41%)]\tLoss: 1.181683\n",
+      "Train Epoch: 1 [25600/60000 (43%)]\tLoss: 1.133363\n",
+      "Train Epoch: 1 [26880/60000 (45%)]\tLoss: 1.117735\n",
+      "Train Epoch: 1 [28160/60000 (47%)]\tLoss: 1.025067\n",
+      "Train Epoch: 1 [29440/60000 (49%)]\tLoss: 1.022916\n",
+      "Train Epoch: 1 [30720/60000 (51%)]\tLoss: 0.868980\n",
+      "Train Epoch: 1 [32000/60000 (53%)]\tLoss: 0.979115\n",
+      "Train Epoch: 1 [33280/60000 (55%)]\tLoss: 0.929074\n",
+      "Train Epoch: 1 [34560/60000 (58%)]\tLoss: 0.927253\n",
+      "Train Epoch: 1 [35840/60000 (60%)]\tLoss: 0.836439\n",
+      "Train Epoch: 1 [37120/60000 (62%)]\tLoss: 0.957468\n",
+      "Train Epoch: 1 [38400/60000 (64%)]\tLoss: 0.923594\n",
+      "Train Epoch: 1 [39680/60000 (66%)]\tLoss: 0.731101\n",
+      "Train Epoch: 1 [40960/60000 (68%)]\tLoss: 0.708485\n",
+      "Train Epoch: 1 [42240/60000 (70%)]\tLoss: 0.868229\n",
+      "Train Epoch: 1 [43520/60000 (72%)]\tLoss: 0.633356\n",
+      "Train Epoch: 1 [44800/60000 (75%)]\tLoss: 0.687116\n",
+      "Train Epoch: 1 [46080/60000 (77%)]\tLoss: 0.729152\n",
+      "Train Epoch: 1 [47360/60000 (79%)]\tLoss: 0.782490\n",
+      "Train Epoch: 1 [48640/60000 (81%)]\tLoss: 0.734664\n",
+      "Train Epoch: 1 [49920/60000 (83%)]\tLoss: 0.607371\n",
+      "Train Epoch: 1 [51200/60000 (85%)]\tLoss: 0.744582\n",
+      "Train Epoch: 1 [52480/60000 (87%)]\tLoss: 0.708631\n",
+      "Train Epoch: 1 [53760/60000 (90%)]\tLoss: 0.628832\n",
+      "Train Epoch: 1 [55040/60000 (92%)]\tLoss: 0.576485\n",
+      "Train Epoch: 1 [56320/60000 (94%)]\tLoss: 0.651480\n",
+      "Train Epoch: 1 [57600/60000 (96%)]\tLoss: 0.600559\n",
+      "Train Epoch: 1 [58880/60000 (98%)]\tLoss: 0.530525\n"
+     ]
+    }
+   ],
    "source": [
     "train_losses = []\n",
     "train_counter = []\n",
@@ -236,13 +304,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defining PyTorchTileDB model...\n",
+      "Saving model on S3 and registering on TileDB-Cloud...\n"
+     ]
+    }
+   ],
    "source": [
     "# Define array model uri.\n",
     "uri = \"tiledb-pytorch-model\"\n",
@@ -251,14 +328,12 @@
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
     "tiledb_model = PyTorchTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
     "\n",
-    "print(tiledb_model.uri)\n",
-    "\n",
     "# We will need the uri that was created from our model class\n",
     "# (and follows pattern tiledb://my_username/s3://my_bucket/my_array),\n",
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
-    "print('Saving model on TileDB-Cloud')\n",
+    "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(model_info={\n",
     "    'model_state_dict': model.state_dict(),\n",
     "    'optimizer_state_dict': optimizer.state_dict(),\n",
@@ -276,13 +351,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'arrays': [{'access_credentials_name': 'aws_creds',\n",
+      "             'allowed_actions': ['read_array_schema',\n",
+      "                                 'read',\n",
+      "                                 'write',\n",
+      "                                 'edit',\n",
+      "                                 'read_array_logs',\n",
+      "                                 'read_array_info'],\n",
+      "             'description': None,\n",
+      "             'file_properties': {'ML_FRAMEWORK': 'PYTORCH',\n",
+      "                                 'ML_FRAMEWORK_VERSION': '1.8.1',\n",
+      "                                 'PYTHON_VERSION': '3.7.8',\n",
+      "                                 'STAGE': 'STAGING'},\n",
+      "             'file_type': 'ml_model',\n",
+      "             'id': '23aedd10-86eb-4939-a81f-8d4518c56cbc',\n",
+      "             'last_accessed': datetime.datetime(2021, 6, 15, 10, 37, 29, tzinfo=tzutc()),\n",
+      "             'license_id': None,\n",
+      "             'license_text': None,\n",
+      "             'logo': None,\n",
+      "             'name': 'tiledb-pytorch-model',\n",
+      "             'namespace': 'gskoumas',\n",
+      "             'namespace_subscribed': None,\n",
+      "             'pricing': None,\n",
+      "             'public_share': False,\n",
+      "             'share_count': None,\n",
+      "             'size': 1015342.0,\n",
+      "             'subscriptions': None,\n",
+      "             'tags': None,\n",
+      "             'tiledb_uri': 'tiledb://gskoumas/tiledb-pytorch-model',\n",
+      "             'type': 'dense',\n",
+      "             'uri': 's3://tiledb-gskoumas/ml_models/tiledb-pytorch-model'}],\n",
+      " 'pagination_metadata': {'page': None,\n",
+      "                         'per_page': None,\n",
+      "                         'total_items': 1.0,\n",
+      "                         'total_pages': 1.0}}\n",
+      "{'access_credentials_name': 'aws_creds',\n",
+      " 'allowed_actions': ['read_array_logs',\n",
+      "                     'read_array_info',\n",
+      "                     'read_array_schema',\n",
+      "                     'read',\n",
+      "                     'write',\n",
+      "                     'edit'],\n",
+      " 'description': None,\n",
+      " 'file_properties': {'ML_FRAMEWORK': 'PYTORCH',\n",
+      "                     'ML_FRAMEWORK_VERSION': '1.8.1',\n",
+      "                     'PYTHON_VERSION': '3.7.8',\n",
+      "                     'STAGE': 'STAGING'},\n",
+      " 'file_type': 'ml_model',\n",
+      " 'id': '23aedd10-86eb-4939-a81f-8d4518c56cbc',\n",
+      " 'last_accessed': datetime.datetime(2021, 6, 15, 10, 37, 29, tzinfo=tzutc()),\n",
+      " 'license_id': None,\n",
+      " 'license_text': None,\n",
+      " 'logo': None,\n",
+      " 'name': 'tiledb-pytorch-model',\n",
+      " 'namespace': 'gskoumas',\n",
+      " 'namespace_subscribed': False,\n",
+      " 'pricing': None,\n",
+      " 'public_share': False,\n",
+      " 'share_count': None,\n",
+      " 'size': 1015342.0,\n",
+      " 'subscriptions': None,\n",
+      " 'tags': None,\n",
+      " 'tiledb_uri': 'tiledb://gskoumas/tiledb-pytorch-model',\n",
+      " 'type': 'dense',\n",
+      " 'uri': 's3://tiledb-gskoumas/ml_models/tiledb-pytorch-model'}\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# List all our models. Here, we filter with file_type = 'ml_model'. All machine learning model TileDB arrays are of type\n",
     "# 'ml_model'\n",
@@ -292,7 +448,7 @@
     "    namespace=TILEDB_USER_NAME))\n",
     "\n",
     "# Get model's info\n",
-    "# print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
+    "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
     "# Place holder for the loaded model\n",
@@ -318,6 +474,13 @@
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
