Renaming of models API

--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from tiledb.ml.models.sklearn import SklearnTileDB"
+    "from tiledb.ml.models.sklearn import SklearnTileDBModel"
    ]
   },
   {
@@ -149,9 +149,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-sklearn-model\"\n",
     "\n",
-    "print('Defining SklearnTileDB model...')\n",
+    "print('Defining SklearnTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = SklearnTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=clf)\n",
+    "tiledb_model = SklearnTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -199,7 +199,7 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_tiledb_model = SklearnTileDB(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_tiledb_model = SklearnTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
     "\n",
     "print(score == loaded_tiledb_model.score(X_test, y_test))\n",
     "\n",
