--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -20,10 +20,10 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import tiledb.cloud\n",
+    "import tiledb\n",
     "import os\n",
     "\n",
-    "from tiledb.ml.models.tensorflow import TensorflowTileDB"
+    "from tiledb.ml.models.tensorflow import KerasTensorflowTileDBModel"
    ]
   },
   {
@@ -133,9 +133,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-tensorflow-model\"\n",
     "\n",
-    "print('Defining TensorflowTileDB model...')\n",
+    "print('Defining KerasTensorflowTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = TensorflowTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
+    "tiledb_model = KerasTensorflowTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -177,21 +177,13 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_model = TensorflowTileDB(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_model = KerasTensorflowTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
     "\n",
     "print(np.equal(model.predict(X_test), loaded_model.predict(X_test)))\n",
     "\n",
     "# Deregister model\n",
-    "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)\n",
-    "\n"
+    "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
