--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -33,7 +33,7 @@
     "from pprint import pprint\n",
     "\n",
     "\n",
-    "from tiledb.ml.models.pytorch import PyTorchTileDB"
+    "from tiledb.ml.models.pytorch import PyTorchTileDBModel"
    ]
   },
   {
@@ -236,7 +236,7 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = PyTorchTileDB(uri='tiledb-pytorch-mnist-1')\n",
+    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1')\n",
     "\n",
     "tiledb_model_1.save(update=False, model_info={\n",
     "    'model_state_dict': network.state_dict(),\n",
@@ -521,7 +521,7 @@
     "for epoch in range(1, epochs + 1):\n",
     "    train(epoch)\n",
     "\n",
-    "tiledb_model_2 = PyTorchTileDB(uri='tiledb-pytorch-mnist-2')\n",
+    "tiledb_model_2 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-2')\n",
     "\n",
     "tiledb_model_2.save(update=False, model_info={\n",
     "    'model_state_dict': network.state_dict(),\n",
