--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
-    "from tiledb.ml.models.sklearn import SklearnTileDB"
+    "from tiledb.ml.models.sklearn import SklearnTileDBModel"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "TileDB array in terms of files on disk please take a look [here](https://docs.tiledb.com/main/basic-concepts/data-format).\n",
     "At the moment (will change in the future) we use pickle, which is one of the [most common scenarios for sklearn models](https://scikit-learn.org/stable/modules/model_persistence.html),\n",
     "to serialize the whole model and save it as a [variable sized attribute](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/writing-arrays/var-length-attributes)\n",
-    "in a TileDB array.  We first declare a SklearnTileDB object (with the corresponding uri) and then save the model as a TileDB array.\n",
+    "in a TileDB array.  We first declare a SklearnTileDBModel object (with the corresponding uri) and then save the model as a TileDB array.\n",
     "Finally, we can save any kind of metadata (in any structure, i.e., list, tuple or dictionary) by passing a dictionary to the meta attribute."
    ]
   },
@@ -146,7 +146,7 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = SklearnTileDB(uri='tiledb-sklearn-mnist-1')\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1')\n",
     "\n",
     "tiledb_model_1.save(model=clf,\n",
     "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
@@ -334,8 +334,8 @@
     "score = clf.score(X_test, y_test)\n",
     "print(\"Test score: %.4f\" % score)\n",
     "\n",
-    "# Declare a SklearnTileDB object\n",
-    "tiledb_model_2 = SklearnTileDB(uri='tiledb-sklearn-mnist-2')\n",
+    "# Declare a SklearnTileDBModel object\n",
+    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2')\n",
     "\n",
     "# Save model as a TileDB array\n",
     "tiledb_model_2.save(model=clf,\n",
