fixed cloud notebooks

--- a/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -18,8 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import tiledb\n",
+    "import tiledb.cloud\n",
     "import os\n",
     "\n",
     "import torch\n",
@@ -252,7 +251,7 @@
     "\n",
     "print('Defining PyTorchTileDB model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = PyTorchTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = PyTorchTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "# We will need the uri that was created from our model class\n",
     "# (and follows pattern tiledb://my_username/s3://my_bucket/my_array),\n",
