--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -19,9 +19,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import tiledb\n",
+    "import tiledb.cloud\n",
     "import os\n",
     "\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from tiledb.ml.models.sklearn import SklearnTileDB"
    ]
@@ -107,12 +108,17 @@
     "X_test = np.random.random((500, 784))\n",
     "y_test = np.random.randint(9, size=500)\n",
     "\n",
+    "scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "\n",
+    "scaled_X_train = scaler.transform(X_train)\n",
+    "scaled_X_test = scaler.transform(X_test)\n",
+    "\n",
     "print(\"Model fit...\")\n",
-    "clf = LogisticRegression(random_state=0).fit(X_train, y_train)\n",
+    "clf = LogisticRegression(random_state=0).fit(scaled_X_train, y_train)\n",
     "\n",
     "print(\"Model score...\")\n",
     "sparsity = np.mean(clf.coef_ == 0) * 100\n",
-    "score = clf.score(X_test, y_test)\n",
+    "score = clf.score(scaled_X_test, y_test)\n",
     "\n",
     "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
     "print(\"Test score with L1 penalty: %.4f\" % score)"
@@ -121,7 +127,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -146,7 +151,7 @@
     "\n",
     "print('Defining SklearnTileDB model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = SklearnTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = SklearnTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=clf)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -164,7 +169,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
