--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import tiledb\n",
+    "import tiledb.cloud\n",
     "import os\n",
     "\n",
     "from tiledb.ml.models.tensorflow import TensorflowTileDB"
@@ -135,7 +135,7 @@
     "\n",
     "print('Defining TensorflowTileDB model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = TensorflowTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = TensorflowTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
